--- a/Html/login.html
+++ b/Html/login.html
@@ -7,23 +7,54 @@
 </head>
 <body>
     <header>
-        <a href="">Ingresá</a>
+        <a href="http://127.0.0.1:5501/Html/Clases/home.html">
+            <img width="240" height="240" src="/Images/logo-mercado-liebre.svg" alt="imagen de mercado liebre">
+        </a>
+
+        <div class="Ingresar">
+            <a href="http://127.0.0.1:5501/Html/Clases/login.html?Nombre+de+usuario=&contrase%C3%B1a=cz#">Ingresá</a>
+        </div>
+
+        <div class="Resgistro">
+            <a href="http://127.0.0.1:5501/Html/Clases/register.html">Registrate</a>
+        </div>
     </header>
 
     <main>
         <h2>Login de usuario:</h2>
-        <form action="" method="get">
+        <form action="#" method="get">
 
-            <label for="">Ingrese su nombre de usuario</label>
-            <input type="text" placeholder="Nombre de usuario" name="Nombre de usuario">
+            <label for="nombre_usuario"></label>
+            <input type="text" placeholder="Nombre de usuario" name="Nombre de usuario" id="nombre_usuario">
 
-            <label for="">Ingrese su contraseña</label>
-            <input type="password" placeholder="contraseña" name="contraseña">
+            <label for="contraseña"></label>
+            <input type="password" placeholder="contraseña" name="contraseña" id="contraseña">
 
-            <button type="submit">Enviar datos</button>
-
-
+            <button type="submit" >Enviar</button>
+        </form>
     </main>
+
+    <footer>
+        <div class="footer_section" >
+            <h4>Pagá con trajeta o en efectivo</h4>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
+            efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+        </div>
+
+        <div class="footer_section" >
+            <h4>Envío gratis desde $ 2.500</h4>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
+            miles de productos. Es un beneficio de Mercado Puntos.</p>
+        </div>
+
+        <div class="footer_section" >
+            <h4>Seguridad de principio a fin</h4>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no
+            puedas hacer, porque estás siempre protegid@.</p>
+        </div>
+
+        <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+    </footer>
 
     
 </body>
