--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="http://127.0.0.1:5501/Html/Clases/home.html">
+        <a href="http://127.0.0.1:5501/home.html">
             <img width="240" height="240" src="/Images/logo-mercado-liebre.svg" alt="imagen de mercado liebre">
         </a>
 
@@ -19,11 +19,11 @@
         <a href="">Compra en cuotas y sin tarjeta de credito</a>
 
         <div class="Ingresar">
-            <a href="http://127.0.0.1:5501/Html/Clases/login.html?Nombre+de+usuario=&contrase%C3%B1a=cz#">Ingresá</a>
+            <a href="http://127.0.0.1:5501/login.html">Ingresá</a>
         </div>
 
         <div class="Resgistro">
-            <a href="http://127.0.0.1:5501/Html/Clases/register.html">Registrate</a>
+            <a href="http://127.0.0.1:5501/register.html">Registrate</a>
         </div>
         
 
