--- a/home.html
+++ b/home.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="./header.css">
+    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./footer.css">
+    <script src="https://kit.fontawesome.com/d4940f2a62.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,18 +23,11 @@
             <button type="submit">Buscar</button>
         </form>
 
-        <a href="">Compra en cuotas y sin tarjeta de credito</a>
-
-        <div class="Ingresar">
-            <a href="http://127.0.0.1:5501/login.html">Ingresá</a>
+        <div class="compra">
+            <i class="fa-solid fa-hand-holding"></i><a href="">Comprá en cuotas y sin tarjeta de credito</a>
         </div>
 
-        <div class="Resgistro">
-            <a href="http://127.0.0.1:5501/register.html">Registrate</a>
-        </div>
-        
-
-        <nav class="burger-button">
+        <nav class="header__nav">
             <ul>
                 <li class="header__li"><a href="">Ofertas</a></li>
                 <li class="header__li"><a href="">Tiendas Oficiales</a></li>
@@ -35,14 +35,19 @@
                 <li class="header__li"><a href="">Ayuda</a></li>
             </ul>
         </nav>
-        
-        <nav class="bootom">
+        <nav class="nav__header">
             <ul>
-                <li class="header__li"><a href="">Creá tu cuenta</a></li>
-                <li class="header__li"><a href="">Ingresá</a></li>
-                <li class="header__li"><a href="">Mis compras</a></li>
+                <li class="header__li"><a href="http://127.0.0.1:5501/register.html">Creá tu cuenta</a> <i class="fa-regular fa-id-card"></i></li>
+                <li class="header__li"><a href="http://127.0.0.1:5501/login.html">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i></li>
+                <li class="header__li"><a href="">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i></li>   
             </ul>
         </nav>
+
+        <article class="buger_menu1">
+            <div class="burger-menu">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </article>
 
     </header>
 
@@ -133,18 +138,21 @@
 
     <footer>
         <div class="footer_section" >
+            <i class="fa-solid fa-credit-card"></i>
             <h4>Pagá con trajeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
             efectivo en puntos de pago. ¡Y siempre es seguro!</p>
         </div>
 
         <div class="footer_section" >
+            <i class="fa-solid fa-gift"></i>
             <h4>Envío gratis desde $ 2.500</h4>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
             miles de productos. Es un beneficio de Mercado Puntos.</p>
         </div>
 
         <div class="footer_section" >
+            <i class="fa-solid fa-user-shield"></i>
             <h4>Seguridad de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no
             puedas hacer, porque estás siempre protegid@.</p>
