--- a/register.html
+++ b/register.html
@@ -30,13 +30,13 @@
 
                 <div class="Registro">
                     <label for="nombre_apellido"></label>
-                    <input type="text" placeholder="Nombre y apellido" id="nombre_apellido">
+                    <input type="text" placeholder="Nombre y apellido" id="nombre_apellido"><br>
 
                     <label for="usuario"></label>
-                    <input type="text" placeholder="Usuario" id="usuario">
+                    <input type="text" placeholder="Usuario" id="usuario"><br>
 
                     <label for="email"></label>
-                    <input type="email" placeholder="email" id="email">
+                    <input type="email" placeholder="email" id="email"><br>
                 </div>
 
                 <div class="fecha_domicilio">
@@ -79,10 +79,10 @@
 
                 <div class="Foto y contraseña">
                     <label for="foto"></label>
-                    <input type="file" name="foto" id="foto" accept="image/png, image/jpeg">
+                    <input type="file" name="foto" id="foto" accept="image/png, image/jpeg"><br>
 
                     <label for="contraseña"></label>
-                    <input type="password" placeholder="ingrese su contraseña" id="contraseña">
+                    <input type="password" placeholder="ingrese su contraseña" id="contraseña"><br>
                     <label for="confirmacion_contraseña"></label>
                     <input type="password" placeholder="Confirmar contraseña" id="confirmacion_contraseña">
                 </div>
